--- a/web/templates/cost_report.html
+++ b/web/templates/cost_report.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Maliyet Raporu - Routing Engine{% endblock %}
+{% block title %}Maliyet Raporu - Rota Motoru{% endblock %}
 {% block page_title %}Maliyet Raporu{% endblock %}
 
 {% block header_actions %}
